--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
  </tr>
 </table>
 <center>
-<table border="0"  height="80%" width="80%" background="ig/bg.jpg">
+<table border="0"  height="80%" width="80%" background="ig/bg.JPG">
 </tr>
 <tr>
-<td colspan = "4"><center><img src="ig/aom.jpg"border="3"width=“20” height=“20”></center></td>
+<td colspan = "4"><center><img src="ig/aom.JPG"border="3"width=“20” height=“20”></center></td>
 </tr>
 
 <tr>
@@ -36,11 +36,12 @@
 		Motto's Lifestyle: enjoy life today yesterday is gone & tomorrow may never come <br>
 
 	</h5></td>
-	<td width="30%"><img src="ig/dog4+.jpg" width="200"></td>
+	<td width="30%"><img src="ig/dog4+.JPG" width="200"></td>
 
 <td width="10%">
-	<a href="MyDog.html"><img src="ig/dog4+.jpg" width="200"></a>
-	<br><br><br><br><br><br><br>
+
+	<br><br><br><br><br>
+	<a href="MyDog.html"><img src="ig/Dog/S2.JPG" width="80"></a><br>Own Web<br>
 		<a href ="https://www.instagram.com/imaommyy"><IMG SRC = "ig/ig.png" width="20"></IMG></a>
 		instagram :@imaommyy<br>
 		<a href ="https://www.facebook.com/sasitorn.pimanprom"><IMG SRC = "ig/facebook.png" width="20"></IMG></a>
