--- a/Dog2.html
+++ b/Dog2.html
@@ -1,5 +1,5 @@
 <html>
-     <body background="ig/bg2.JPG">
+     <body background="ig/bg2.jpg">
         <table border="0"  height="200" width="100%" background="ig/.gif">
  <tr>
 <td><center><font size = "30"><font face="Courier New"><marquee direction="left" scrollamount="5" width="50%"><img src="ig/logo.png"></marequee> </font></center></td>
@@ -10,7 +10,7 @@
 <table border="0"  height="80%" width="80%" background="" cellpadding="10" cellspacing="0">
 
 <tr>
-  <td  ><center><font size = "50"><B><u>Siberian Husky</u></B></font><br><img src="ig/Dog/S1.JPG" width="450" border="3"></center></td>  
+  <td  ><center><font size = "50"><B><u>Siberian Husky</u></B></font><br><img src="ig/Dog/S1.jpg" width="450" border="3"></center></td>  
 </tr>
 <tr><td>The Siberian Husky is a beautiful dog breed with a thick coat that comes in a multitude of colors and markings. Their blue or multi-colored eyes and striking facial masks only add to the appeal of this breed, which originated in Siberia. It is easy to see why many are drawn to the Siberian’s wolf-like looks, but be aware that this athletic, intelligent dog can be independent and challenging for first-time dog owners</td>
 </tr>
