--- a/MyDog.html
+++ b/MyDog.html
@@ -1,5 +1,5 @@
 <html>
-     <body background="ig/bg2.JPG">
+     <body background="ig/bg2.jpg">
         <table border="0"  height="200" width="100%" background="ig/.gif">
  <tr>
 <td><center><font size = "30"><font face="Courier New"><marquee direction="left" scrollamount="5" width="50%"><img src="ig/logo.png"></marequee> </font></center></td>
@@ -11,9 +11,9 @@
 
 <tr>
 
-  <td width="20%" ><a href="Dog1.html"><img src="ig/Dog/M1.JPG" width="450" border="3"></a></td>
-  <td width="20%" ><a href="Dog2.html"><img src="ig/Dog/M2.JPG" width="350" border="3"></a></td>
-  <td width="20%" ><a href="Dog3.html"><img src="ig/Dog/M3.JPG" width="400" border="3"></a></td>
+  <td width="20%" ><a href="Dog1.html"><img src="ig/Dog/M1.jpg" width="450" border="3"></a></td>
+  <td width="20%" ><a href="Dog2.html"><img src="ig/Dog/M2.jpg" width="350" border="3"></a></td>
+  <td width="20%" ><a href="Dog3.html"><img src="ig/Dog/M3.jpg" width="400" border="3"></a></td>
 </tr>
 </table>
 
