--- a/Dog1.html
+++ b/Dog1.html
@@ -1,5 +1,5 @@
 <html>
-     <body background="ig/bg2.JPG">
+     <body background="ig/bg2.jpg">
         <table border="0"  height="200" width="100%" background="ig/.gif">
  <tr>
 <td><center><font size = "30"><font face="Courier New"><marquee direction="left" scrollamount="5" width="50%"><img src="ig/logo.png"></marequee> </font></center></td>
@@ -11,7 +11,7 @@
 
 <tr>
   <td  ><center><font size = "50"><B><u>Golden Retriever</u></B></font><br>
-  	<img src="ig/Dog/G1.JPG" width="450" border="3"></center></td>  
+  	<img src="ig/Dog/G1.jpg" width="450" border="3"></center></td>  
 </tr>
 <tr><td>The Golden Retriever is one of the most popular dog breeds in the U.S. The breed’s friendly, tolerant attitude makes him a fabulous family pet, and his intelligence makes him a highly capable working dog. Golden Retrievers excel at retrieving game for hunters, tracking, sniffing out drugs, and as therapy and assistance dogs. They’re also natural athletes, and do well in dog sports such as agility and competitive obedience.</td>
 </tr>
