--- a/Dog3.html
+++ b/Dog3.html
@@ -1,5 +1,5 @@
 <html>
-     <body background="ig/bg2.JPG">
+     <body background="ig/bg2.jpg">
         <table border="0"  height="200" width="100%" background="ig/.gif">
  <tr>
 <td><center><font size = "30"><font face="Courier New"><marquee direction="left" scrollamount="5" width="50%"><img src="ig/logo.png"></marequee> </font></center></td>
@@ -10,7 +10,7 @@
 <table border="0"  height="80%" width="80%" background="" cellpadding="10" cellspacing="0">
 
 <tr>
-  <td  ><center><font size = "50"><B><u>Samoyed</u></B></font><br><img src="ig/Dog/SA1.JPG" width="450" border="3"></center></td>  
+  <td  ><center><font size = "50"><B><u>Samoyed</u></B></font><br><img src="ig/Dog/SA1.jpg" width="450" border="3"></center></td>  
 </tr>
 <tr><td>Originally bred to hunt, haul sledges, and herd reindeer, the Samoyed dog breed proved a valuable companion for northwestern Siberia’s Samoyede people. Among the breed’s duties: pack hiking, tracking, and warming their owners by sleeping on top of them at night. A working breed, the Samoyed can be strong-willed at times, but above all they remain friendly, gentle, and devoted family dogs.
 </td>
