--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <td width="10%">
 
 	<br><br><br><br><br>
-	<a href="MyDog.html"><img src="ig/Dog/S2.JPG" width="80"></a><br>Own Web<br>
+	<a href="MyDog.html"><img src="ig/Dog/S2.jpg" width="80"></a><br>Own Web<br>
 		<a href ="https://www.instagram.com/imaommyy"><IMG SRC = "ig/ig.png" width="20"></IMG></a>
 		instagram :@imaommyy<br>
 		<a href ="https://www.facebook.com/sasitorn.pimanprom"><IMG SRC = "ig/facebook.png" width="20"></IMG></a>
