--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  </tr>
 </table>
 <center>
-<table border="0"  height="80%" width="80%" background="ig/bg.JPG">
+<table border="0"  height="80%" width="80%" background="ig/bg.jpg">
 </tr>
 <tr>
 <td colspan = "4"><center><img src="ig/aom.JPG"border="3"width=“20” height=“20”></center></td>
