--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Profile</title>
 </head>
-<body background="bgg.jpg">
+<body background="ig/bgg.jpg">
 <table border="0"  height="200" width="100%" background="ig/BG-Top.gif">
  <tr>
 <td><center><font size = "30"><font face="Courier New">Profile</font></center></td>
